--- a/pocetna.html
+++ b/pocetna.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo Home</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/style_pocetna.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-circle-progress/1.2.2/circle-progress.min.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
