implementirano dodavanje naslova i datuma(odabrati datum ili bez datuma) uz todo stavku

--- a/noviZadatak.html
+++ b/noviZadatak.html
@@ -18,7 +18,7 @@
             <input type="text" class="todo-title" placeholder="Naslov">
             <input type="text" class="todo-input" placeholder="Opis"  >
             <div class="choose-date">
-                <input type="date" >
+                <input type="date" class="datePicker">
                 <div id=nodate>
                     <label for="checkbox_nodate">No date</label>
                     <input id="checkbox_nodate" type="checkbox">
