omoguceno dodavanje kategorija, popravljena validacija u dodavanju, uradjen prikaz todo stavke sa svim detaljima

--- a/danas.html
+++ b/danas.html
@@ -11,9 +11,9 @@
 <body>
     <div id="overHeaderPanel"></div>
     <header>
-        <div class="wrapper">
+        <div class="wrapperHeader">
             <span id="todaysDate"></span>
-            <span>___placeholder</span>
+            <span id="navIcons">icons placeholder</span>
         </div>
     </header>
     <div class="wrapper">
