--- a/kalendar.html
+++ b/kalendar.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./style_kalendar.css">
     <title>Danas</title>
     <link rel="shortcut icon" href="#">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
     <div id="overHeaderPanel"></div>
@@ -30,37 +31,37 @@
           </ul>
           
           <ul class="days">  
-            <li><span id="1">1</span></li>
-            <li><span id="2">2</span></li>
-            <li><span id="3">3</span></li>
-            <li><span id="4">4</span></li>
-            <li><span id="5">5</span></li>
-            <li><span id="6">6</span></li>
-            <li><span id="7">7</span></li>
-            <li><span id="8">8</span></li>
-            <li><span id="9">9</span></li>
-            <li><span id="10">10</span></li>
-            <li><span id="11">11</span></li>
-            <li><span id="12">12</span></li>
-            <li><span id="13">13</span></li>
-            <li><span id="14">14</span></li>
-            <li><span id="15">15</span></li>
-            <li><span id="16">16</span></li>
-            <li><span id="17">17</span></li>
-            <li><span id="18">18</span></li>
-            <li><span id="19">19</span></li>
-            <li><span id="20">20</span></li>
-            <li><span id="21">21</span></li>
-            <li><span id="22">22</span></li>
-            <li><span id="23">23</span></li>
-            <li><span id="24">24</span></li>
-            <li><span id="25">25</span></li>
-            <li><span id="26">26</span></li>
-            <li><span id="27">27</span></li>
-            <li><span id="28">28</span></li>
-            <li><span id="29">29</span></li>
-            <li><span id="30">30</span></li>
-            <li><span id="31">31</span></li>
+            <li><span id="1" onclick="aktiviraj(this.id)">1</span></li>
+            <li><span id="2" onclick="aktiviraj(this.id)">2</span></li>
+            <li><span id="3" onclick="aktiviraj(this.id)">3</span></li>
+            <li><span id="4" onclick="aktiviraj(this.id)">4</span></li>
+            <li><span id="5" onclick="aktiviraj(this.id)">5</span></li>
+            <li><span id="6" onclick="aktiviraj(this.id)">6</span></li>
+            <li><span id="7" onclick="aktiviraj(this.id)">7</span></li>
+            <li><span id="8" onclick="aktiviraj(this.id)">8</span></li>
+            <li><span id="9" onclick="aktiviraj(this.id)">9</span></li>
+            <li><span id="10" onclick="aktiviraj(this.id)">10</span></li>
+            <li><span id="11" onclick="aktiviraj(this.id)">11</span></li>
+            <li><span id="12" onclick="aktiviraj(this.id)">12</span></li>
+            <li><span id="13" onclick="aktiviraj(this.id)">13</span></li>
+            <li><span id="14" onclick="aktiviraj(this.id)">14</span></li>
+            <li><span id="15" onclick="aktiviraj(this.id)">15</span></li>
+            <li><span id="16" onclick="aktiviraj(this.id)">16</span></li>
+            <li><span id="17" onclick="aktiviraj(this.id)">17</span></li>
+            <li><span id="18" onclick="aktiviraj(this.id)">18</span></li>
+            <li><span id="19" onclick="aktiviraj(this.id)">19</span></li>
+            <li><span id="20" onclick="aktiviraj(this.id)">20</span></li>
+            <li><span id="21" onclick="aktiviraj(this.id)">21</span></li>
+            <li><span id="22" onclick="aktiviraj(this.id)">22</span></li>
+            <li><span id="23" onclick="aktiviraj(this.id)">23</span></li>
+            <li><span id="24" onclick="aktiviraj(this.id)">24</span></li>
+            <li><span id="25" onclick="aktiviraj(this.id)">25</span></li>
+            <li><span id="26" onclick="aktiviraj(this.id)">26</span></li>
+            <li><span id="27" onclick="aktiviraj(this.id)">27</span></li>
+            <li><span id="28" onclick="aktiviraj(this.id)">28</span></li>
+            <li><span id="29" onclick="aktiviraj(this.id)">29</span></li>
+            <li><span id="30" onclick="aktiviraj(this.id)">30</span></li>
+            <li><span id="31" onclick="aktiviraj(this.id)">31</span></li>
           </ul>
           
         <div class="todo-container">
