--- a/dodavanjeZabiljeske/dodavanjeZabiljeske.html
+++ b/dodavanjeZabiljeske/dodavanjeZabiljeske.html
@@ -6,7 +6,7 @@
     <title>Novi zadatak</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/style_dodavanjeZabiljeske.css">
+    <link rel="stylesheet" href="/dodavanjeZabiljeske/style_dodavanjeZabiljeske.css">
 </head>
 <body>
     <div class="wrapper">
@@ -24,6 +24,6 @@
     </div>
     
     
-    <script src="DodavanjeZabiljeske.js"></script>
+    <script src="/dodavanjeZabiljeske/dodavanjeZabiljeske.js"></script>
 </body>
 </html>
