--- a/postavke/postavke.html
+++ b/postavke/postavke.html
@@ -27,14 +27,15 @@
         <button type="button" class="btn btn-block">Swipe options</button>
         <button type="button" class="btn btn-block">Reset to default</button>
     </div>
-        
+    
     <footer>
         <div class="wrapper">
             <div id="nazad">
-                    <h3>nazad</h3>
+                <i class="fas fa-backward"></i>
+                <h3>nazad</h3>
             </div>
         </div>
     </footer>
-    <script src="/postavke.js"></script>
+    <script src="./postavke.js"></script>
 </body>
 </html>
