--- a/zabiljeske/zabiljeske.html
+++ b/zabiljeske/zabiljeske.html
@@ -6,7 +6,7 @@
     <title>Novi zadatak</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/style_zabiljeske.css">
+    <link rel="stylesheet" href="./style_zabiljeske.css">
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
 </head>
 <body>
@@ -15,21 +15,23 @@
         <header>
             <h1>Zabilješke:</h1>
         </header>
-        <div class="zab-list">
-            
+        <div class="zab-container">
+            <ul class="zab-list"></ul>
         </div>
     </div>
     <footer>
         <div class="wrapper">
             <div id="dodajZab">
-                    <h3> + dodaj</h3>
+                <i class="far fa-plus-square"></i>
+                <h3>dodajnovi</h3>
             </div>
             <div id="danas">
-                    <h3>danas</h3>
+                <i class="fas fa-tasks"></i>
+                <h3>danas</h3>
             </div>
         </div>
     </footer>
     
-    <script src="zabiljeske.js"></script>
+    <script src="./zabiljeske.js"></script>
 </body>
 </html>
