--- a/pocetna.html
+++ b/pocetna.html
@@ -10,6 +10,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-circle-progress/1.2.2/circle-progress.min.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Barlow&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+    
 </head>
 
 <body>
@@ -35,52 +37,53 @@
             </div>
             <div id="dovrseni">
                 <h3>Dovršeni</h3>
-                <span id="postavljeniNumber">15</span>
+                <span id="dovrseniNumber">15</span>
             </div>
             <div id="aktivni">
                 <h3>Aktivni</h3>
-                <span id="postavljeniNumber">15</span>
+                <span id="aktivniNumber">15</span>
             </div>
         </div>
 
         <div id="sliders">
             <div id="slider1">
-                <label for="kateg1">Kategorija 1:</label>
+                <label for="kateg1">Posao:</label>
                 <progress id="kateg1" value="69" max="100"> </progress>
             </div>
             <div id="slider2">
-                <label for="kateg2">Kategorija 2:</label>
+                <label for="kateg2">Lično:</label>
                 <progress id="kateg2" value="69" max="100"> </progress>
             </div>
             <div id="slider3">
-                <label for="kateg3">Kategorija 3:</label>
+                <label for="kateg3">Zabava:</label>
                 <progress id="kateg3" value="69" max="100"> </progress>
+            </div>
+            <div id="slider4">
+                <label for="kateg4">Ostalo:</label>
+                <progress id="kateg4" value="69" max="100"> </progress>
             </div>
         </div>
     </div>
 
     <footer>
         <div class="wrapper">
-            <div id="pocetna">
-                <a href="">
+            <div onclick="location.href='/pocetna.html'" id="pocetna">
+                <i class="fa fa-home" aria-hidden="true"></i>
                     <h3>početna</h3>
-                </a>
             </div>
-            <div id="dodajnovi">
-                <a href="">
+            <div onclick="location.href='/noviZadatak.html'" id="dodajNovi">
+                <i class="fa fa-plus-square" aria-hidden="true"></i>
                     <h3>dodajnovi</h3>
-                </a>
             </div>
             <div id="danas">
-                <a href="">
+                <i onclick="location.href='/danas.html'" class="fa fa-flag-checkered" aria-hidden="true"></i>
                     <h3>danas</h3>
-                </a>
             </div>
         </div>
     </footer>
 
 
-    <script src="/script.js"></script>
+    <script src="/pocetna.js"></script>
 </body>
 
 </html>
