--- a/danas.html
+++ b/danas.html
@@ -15,9 +15,9 @@
         <div class="wrapperHeader">
             <span id="todaysDate"></span>
             <div id="navIcons">
-                <i onclick="location.href='/zabiljeske.html'" class="fa fa-sticky-note" aria-hidden="true"></i>
-                <i onclick="location.href='/kalendar.html'" class="fa fa-calendar" aria-hidden="true"></i>
-                <i onclick="location.href='/postavke.html'" class="fa fa-cog" aria-hidden="true"></i>
+                <i onclick="location.href='/zabiljeske/zabiljeske.html'" class="fa fa-sticky-note" aria-hidden="true"></i>
+                <i onclick="location.href='/kalendar/kalendar.html'" class="fa fa-calendar" aria-hidden="true"></i>
+                <i onclick="location.href='/postavke/postavke.html'" class="fa fa-cog" aria-hidden="true"></i>
             </div>
         </div>
     </header>
