--- a/kalendar/kalendar.html
+++ b/kalendar/kalendar.html
@@ -17,14 +17,14 @@
         <div class="wrapperHeader">
             <span id="todaysDate"></span>
             <span id="navIcons">
-                <span id="icon-settings">
-                    <i class="fas fa-sliders-h"></i>
-                </span>
                 <span id="icon-notes">
-                    <i class="far fa-sticky-note"></i>
+                    <i class="fa fa-sticky-note" aria-hidden="true"></i>
                 </span>
                 <span id="icon-calendar">
-                    <i class="far fa-calendar-alt"></i>
+                    <i class="fa fa-calendar" aria-hidden="true"></i>
+                </span>
+                <span id="icon-settings">
+                    <i class="fa fa-cog" aria-hidden="true"></i>
                 </span>
             </span>
         </div>
@@ -87,15 +87,15 @@
         <footer>
             <div class="wrapper">
                 <div id="pocetna">
-                    <i class="fas fa-home"></i>
+                    <i class="fa fa-home" aria-hidden="true"></i>
                     <h3>početna</h3>
                 </div>
-                <div id="dodajnovi">
-                    <i class="far fa-plus-square"></i>
+                <div id="dodajNovi">
+                    <i class="fa fa-plus-square" aria-hidden="true"></i>
                     <h3>dodajnovi</h3>
                 </div>
                 <div id="danas">
-                    <i class="fas fa-tasks"></i>
+                    <i class="fa fa-flag-checkered" aria-hidden="true"></i>
                     <h3>danas</h3>
                 </div>
             </div>
