--- a/zabiljeske/zabiljeske.html
+++ b/zabiljeske/zabiljeske.html
@@ -23,7 +23,7 @@
         <div class="wrapper">
             <div id="dodajZab">
                 <i class="far fa-plus-square"></i>
-                <h3>dodajnovi</h3>
+                <h3>dodajnovu</h3>
             </div>
             <div id="danas">
                 <i class="fas fa-tasks"></i>
