--- a/dodavanjeZabiljeske/dodavanjeZabiljeske.html
+++ b/dodavanjeZabiljeske/dodavanjeZabiljeske.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="wrapper">
-
+        <a style="text-decoration: none;color: white;" href="../zabiljeske/zabiljeske.html"> <i id="povratak" class="fas fa-arrow-left"></i> </a>
         <header>
             <h1>Nova zabilješka</h1>
         </header>
