--- a/danas/danas.html
+++ b/danas/danas.html
@@ -36,13 +36,6 @@
             <button id="6" class="dayBtn" onclick="aktiviraj(this.id)">Danas</button>
             <button id="7" class="dayBtn" onclick="aktiviraj(this.id)">Danas</button>
 
-            <!-- <button><span id="1" onclick="aktiviraj(this.id)">Danas</span></button> -->
-            <!-- <button><span id="2" onclick="aktiviraj(this.id)">Sutra</span></button>
-            <button><span id="3" onclick="aktiviraj(this.id)">1</span></button>
-            <button><span id="4" onclick="aktiviraj(this.id)">1</span></button>
-            <button><span id="5" onclick="aktiviraj(this.id)">1</span></button>
-            <button><span id="6" onclick="aktiviraj(this.id)">1</span></button>
-            <button><span id="7" onclick="aktiviraj(this.id)">1</span></button> -->
         </div>
         
         <div class="todo-container">
@@ -52,22 +45,23 @@
         
     <footer>
         <div class="wrapper">
-            <div onclick="location.href='/pocetna.html'" id="pocetna">
+            <div onclick="location.href='/pocetna/pocetna.html'" id="pocetna">
                 <i class="fa fa-home" aria-hidden="true"></i>
                     <h3>početna</h3>
             </div>
-            <div onclick="location.href='/noviZadatak.html'" id="dodajNovi">
+            <div id="dodajNovi">
                 <i class="fa fa-plus-square" aria-hidden="true"></i>
                     <h3>dodaj novi</h3>
             </div>
             <div id="danas">
-                <i onclick="location.href='/danas.html'" class="fa fa-flag-checkered" aria-hidden="true"></i>
+                <i onclick="location.href='/danas/danas.html'" class="fa fa-flag-checkered" aria-hidden="true"></i>
                     <h3>danas</h3>
             </div>
         </div>
     </footer>
 
-    <script src="/prikazTodoItema.js"></script>
+
+    <script src="./prikazTodoItema.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.5.1/moment.min.js"></script>
 </body>
 </html>
