--- a/pocetna/pocetna.html
+++ b/pocetna/pocetna.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo Home</title>
-    <link rel="stylesheet" href="/style_pocetna.css">
+    <link rel="stylesheet" href="./style_pocetna.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-circle-progress/1.2.2/circle-progress.min.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Barlow&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     
 </head>
@@ -67,23 +67,23 @@
 
     <footer>
         <div class="wrapper">
-            <div onclick="location.href='/pocetna.html'" id="pocetna">
+            <div onclick="location.href='/pocetna/pocetna.html'" id="pocetna">
                 <i class="fa fa-home" aria-hidden="true"></i>
                     <h3>početna</h3>
             </div>
-            <div onclick="location.href='/noviZadatak.html'" id="dodajNovi">
+            <div onclick="location.href='/novi zadatak/noviZadatak.html '" id="dodajNovi">
                 <i class="fa fa-plus-square" aria-hidden="true"></i>
-                    <h3>dodajnovi</h3>
+                    <h3>dodaj novi</h3>
             </div>
             <div id="danas">
-                <i onclick="location.href='/danas.html'" class="fa fa-flag-checkered" aria-hidden="true"></i>
+                <i onclick="location.href='/danas/danas.html'" class="fa fa-flag-checkered" aria-hidden="true"></i>
                     <h3>danas</h3>
             </div>
         </div>
     </footer>
 
 
-    <script src="/pocetna.js"></script>
+    <script src="/pocetna/pocetna.js"></script>
 </body>
 
 </html>
