--- a/zabiljeske/zabiljeske.html
+++ b/zabiljeske/zabiljeske.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Novi zadatak</title>
+    <title>Zabilješke</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <link rel="stylesheet" href="./style_zabiljeske.css">
@@ -23,7 +23,7 @@
         <div class="wrapper">
             <div id="dodajZab">
                 <i class="far fa-plus-square"></i>
-                <h3>dodajnovu</h3>
+                <h3>+ dodaj</h3>
             </div>
             <div id="danas">
                 <i class="fas fa-tasks"></i>
